--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
+    "@types/mapbox-gl": "^3.4.1",
     "lucide-react": "^0.344.0",
+    "mapbox-gl": "^3.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
