--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsdom": "^23.0.1",
     "postcss": "^8.4.35",
     "prettier": "^3.6.2",
+    "supabase": "^2.33.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
