--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^3.14.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-image-crop": "^11.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
