--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
     "@types/mapbox-gl": "^3.4.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^3.14.0",
     "react": "^18.3.1",
