--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/mapbox-gl": "^3.4.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
