--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,26 +9,26 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/favicon.svg?v=2",
+      "src": "/favicon.png?v=3",
       "sizes": "32x32",
-      "type": "image/svg+xml"
+      "type": "image/png"
     },
     {
-      "src": "/apple-touch-icon.svg?v=2",
+      "src": "/apple-touch-icon.png?v=3",
       "sizes": "180x180",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-192x192.svg?v=2",
+      "src": "/icon-192x192.png?v=3",
       "sizes": "192x192",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.svg?v=2",
+      "src": "/icon-512x512.png?v=3",
       "sizes": "512x512",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ],
